StockManagement/stockmanagement-web-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stockmanagement-web-route
spec:
  entryPoints:
    - web
  routes:
    - match: /stockmanagement
      kind: Rule
      services:
        - name: my-service
          port: 80
      middlewares:
        - name: strip-all-prefixes
